# comoji

./: Cargo.nix  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  overlay.nix
src/: commit.rs  config.rs  configuration.rs  emoji.rs  error.rs  main.rs  main.yaml  prompts.rs
