[package]
name = "comoji"
version = "1.2.0"
authors = ["Thomas Wehmöller <contact.mordrag@gmail.com>", "Jonas Geschke <github@yonny.de>"]
edition = "2021"
license = "MIT"
description = "CLI for conventional emoji commits"
homepage = "https://github.com/MordragT/comoji"
repository = "https://github.com/MordragT/comoji"

[dependencies]
clap = { version = "3.1", features = ["cargo"] }
dialoguer = { version = "0.10", features = ["fuzzy-select"] }
confy = "0.4"
serde_derive = "1.0"
serde = "1.0"
