[package]
name = "comoji"
version = "1.3.0"
authors = ["Thomas Wehmöller <contact.mordrag@gmail.com>"]
edition = "2021"
license = "MIT"
description = "CLI for conventional emoji commits"
homepage = "https://github.com/MordragT/comoji"
repository = "https://github.com/MordragT/comoji"

[dependencies]
directories = "5.0"
clap = { version = "4.5", features = ["default", "derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
miette = "7.2"
